--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/core": "1.5.1"
+    "@redwoodjs/core": "1.5.1",
+    "@vercel/nft": "^0.20.0",
+    "archiver": "^5.3.1",
+    "fs-extra": "^10.1.0",
+    "serverless": "^3.19.0"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
