--- a/web/package.json
+++ b/web/package.json
@@ -20,5 +20,9 @@
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "serverless": "^3.19.0",
+    "serverless-lift": "^1.19.0"
   }
 }
