--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,11 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
     "serverless": "^3.19.0",
-    "serverless-lift": "^1.19.0"
+    "serverless-lift": "^1.19.0",
+    "tailwindcss": "^3.1.3"
   }
 }
